Pass device argument to `keights volumize`
This makes configuration from CloudFormation easier, so that
the systemd unit does not have to override ExecStart.

--- a/fpm/usr/lib/systemd/system/keights-volumize.service
+++ b/fpm/usr/lib/systemd/system/keights-volumize.service
@@ -5,8 +5,11 @@ Before=var-lib-etcd.mount
 [Service]
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_VOLUME_TAG=
+# Environment=KEIGHTS_VOLUME_DEVICE=
 Type=oneshot
-ExecStart=/usr/bin/keights volumize -v ${KEIGHTS_VOLUME_TAG}
+ExecStart=/usr/bin/keights volumize \
+            -d ${KEIGHTS_VOLUME_DEVICE} \
+            -v ${KEIGHTS_VOLUME_TAG}
 
 [Install]
 WantedBy=multi-user.target
