Add value for device variable since AMI disk layout has changed

--- a/master.yml
+++ b/master.yml
@@ -379,6 +379,7 @@ Resources:
                   [Service]
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_VOLUME_TAG=etcd:instance
+                  Environment=KEIGHTS_VOLUME_DEVICE=xvdg
 
               - path: /etc/systemd/system/keights-whisper-controller.service.d/environment.conf
                 owner: root:root
