--- a/stack/ansible/vars/otto.yml
+++ b/stack/ansible/vars/otto.yml
@@ -2,10 +2,8 @@ cluster_name: '{{ env }}'
 vpc_id: vpc-ba92ad08
 subnet_ids: subnet-6c31888d,subnet-f3cdd152,subnet-e245724f
 num_masters: 3
-num_nodes: 3
-node_labels: 'size=standard,env=dev'
 image_id: ami-03d0b653e1a63db94
-instance_type: m4.large
+master_instance_type: m4.large
 keypair: keights
 load_balancer_scheme: internet-facing
 kms_key_id: d4baff42-9ea6-4f7d-a866-136587c77815
@@ -18,3 +16,13 @@ service_cidr: 10.1.0.0/16
 ssh_access_cidr: 0.0.0.0/0
 api_access_cidr: 0.0.0.0/0
 etcd_volume_size: 1
+node_groups:
+  - name: standard
+    num_nodes: 3
+    vpc_id: '{{ vpc_id }}'
+    subnet_ids: '{{ subnet_ids }}'
+    image_id: '{{ image_id }}'
+    instance_type: m3.medium
+    keypair: '{{ keypair }}'
+    ssh_access_cidr: '{{ ssh_access_cidr }}'
+    node_labels: size=standard,env=dev
