Disable cloud-init network configuration

--- a/stack/ami/debian/staging/etc/cloud/cloud.cfg.d/01_cloudboss.cfg
+++ b/stack/ami/debian/staging/etc/cloud/cloud.cfg.d/01_cloudboss.cfg
@@ -1,6 +1,8 @@
 apt_preserve_sources_list: true
 manage_etc_hosts: true
 locale: false
+network:
+  config: disabled
 system_info:
   distro: debian
   default_user:
