Add `controlPlaneEndpoint` option to `kubeadm`
This option tells the API server to respond with its DNS name
instead of IP when a node joins. It makes it possible to replace
the masters without nodes losing contact.

--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -4,6 +4,7 @@ kind: MasterConfiguration
 nodeName: {{ .NodeName }}
 api:
   advertiseAddress: {{ .MyIP }}
+  controlPlaneEndpoint: {{ .APIServer }}
 etcd:
   endpoints: [{{ range $i, $k := keys .HostMap }}{{ if $i }},{{end}}'https://{{ $.Prefix }}-{{ $k }}.{{ $.Domain }}:2379'{{ end }}]
   caFile: /etc/kubernetes/pki/etcd-ca.crt
