Add CoreDNS instead of KubeDNS

--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -30,6 +30,7 @@ kubeProxy:
     featureGates: SupportIPVSProxyMode=true
 featureGates:
   HighAvailability: true
+  CoreDNS: true
 apiServerExtraArgs:
   external-hostname: {{ .APIServer }}
 controllerManagerExtraArgs:
