--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -27,7 +27,8 @@ certificatesDir: /etc/kubernetes/pki
 kubeProxy:
   config:
     mode: ipvs
-    featureGates: SupportIPVSProxyMode=true
+    featureGates:
+      SupportIPVSProxyMode: true
 featureGates:
   HighAvailability: true
   CoreDNS: true
