Add port to apiserver hostname

--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -4,7 +4,7 @@ kind: MasterConfiguration
 nodeName: {{ .NodeName }}
 api:
   advertiseAddress: {{ .MyIP }}
-  controlPlaneEndpoint: {{ .APIServer }}
+  controlPlaneEndpoint: {{ .APIServer }}:443
 etcd:
   endpoints: [{{ range $i, $k := keys .HostMap }}{{ if $i }},{{end}}'https://{{ $.Prefix }}-{{ $k }}.{{ $.Domain }}:2379'{{ end }}]
   caFile: /etc/kubernetes/pki/etcd-ca.crt
