--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -178,6 +178,8 @@
           mode: '0644'
         - path: etc/sysctl.d/kubernetes.conf
           mode: '0644'
+        - path: etc/modules-load.d/modules.conf
+          mode: '0644'
 
     - name: expand staging templates into chroot
       template:
