ExecStartPost doesn't play so well with service type=simple
With type=simple, systemd treats the ExecStart as successful as
soon as the process starts, and then runs ExecStartPost. This
caused the ExecStart to fail as the input file was immediately
removed.

--- a/fpm/usr/lib/systemd/system/keights-kubeadm-init.service
+++ b/fpm/usr/lib/systemd/system/keights-kubeadm-init.service
@@ -11,9 +11,9 @@ ExecStart=/bin/sh -c ' \
       --config=/var/lib/kubeadm/config.yaml \
       --ignore-preflight-errors=all \
       --skip-token-print && \
-    touch /var/lib/kubeadm/initialized \
+    touch /var/lib/kubeadm/initialized && \
+    rm /var/lib/kubeadm/config.yaml \
 '
-ExecStartPost=/bin/rm /var/lib/kubeadm/config.yaml
 Restart=on-failure
 RestartSec=10s
 
