Switch back to using individual images instead of hyperkube
The hyperkube image is missing the ipset utility, so using
kube-proxy in ipvs mode doesn't work.

--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -33,4 +33,4 @@ apiServerExtraArgs:
   external-hostname: {{ .APIServer }}
 controllerManagerExtraArgs:
   configure-cloud-routes: 'false'
-unifiedControlPlaneImage: {{ .HyperkubeImage }}
+imageRepository: {{ .ImageRepository }}
