--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -252,7 +252,10 @@
         while [ ! -S /var/run/docker.sock ]; do
             sleep 0.5
         done
-        docker pull k8s.gcr.io/hyperkube-amd64:v{{ k8s_version }}
+        docker pull k8s.gcr.io/kube-apiserver-amd64:v{{ k8s_version }}
+        docker pull k8s.gcr.io/kube-controller-manager-amd64:v{{ k8s_version }}
+        docker pull k8s.gcr.io/kube-proxy-amd64:v{{ k8s_version }}
+        docker pull k8s.gcr.io/kube-scheduler-amd64:v{{ k8s_version }}
         docker pull k8s.gcr.io/etcd-amd64:{{ etcd_version }}
         docker pull k8s.gcr.io/pause-amd64:{{ pause_version }}
         docker pull k8s.gcr.io/kube-addon-manager-amd64:v{{ addon_manager_version }}
