Re-enable ipvs mode for kube-proxy

--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -24,6 +24,11 @@ selfHosted: true
 apiServerCertSANs:
   - {{ .APIServer }}
 certificatesDir: /etc/kubernetes/pki
+kubeProxy:
+  config:
+    mode: ipvs
+    featureGates:
+      SupportIPVSProxyMode: true
 featureGates:
   HighAvailability: true
   CoreDNS: true
