Rework security groups
Security group definitions are all put into the `common.yml`
CloudFormation template, so all the rules between them can be
done ahead and then applied to the other stacks.

Traffic has been opened between all nodes in the cluster, except
for nodes having access to etcd on the masters. Later this may be
updated to be more specific, but there is little documentation on
which ports are required to be opened.

--- a/stack/ansible/playbook.yml
+++ b/stack/ansible/playbook.yml
@@ -20,6 +20,8 @@
           VpcId: '{{ vpc_id }}'
           ClusterName: '{{ cluster_name }}'
           KmsKeyId: '{{ kms_key_id }}'
+          ApiAccessCidr: '{{ api_access_cidr }}'
+          SshAccessCidr: '{{ ssh_access_cidr }}'
         tags:
           KubernetesCluster: '{{ cluster_name }}'
       register: common_stack
@@ -39,14 +41,12 @@
           KeyPair: '{{ keypair }}'
           IamInstanceProfile: '{{ common_stack.stack_outputs.MasterInstanceProfile }}'
           LoadBalancerScheme: '{{ load_balancer_scheme }}'
-          ApiServerSecurityGroup: '{{ common_stack.stack_outputs.ApiServerSecurityGroup }}'
-          KubeletSecurityGroup: '{{ common_stack.stack_outputs.KubeletSecurityGroup }}'
+          LoadBalancerSecurityGroup: '{{ common_stack.stack_outputs.LoadBalancerSecurityGroup }}'
+          MasterSecurityGroup: '{{ common_stack.stack_outputs.MasterSecurityGroup }}'
           LambdaRoleArn: '{{ common_stack.stack_outputs.LambdaRoleArn }}'
           KmsKeyId: '{{ kms_key_alias }}'
           PodCidr: '{{ pod_cidr }}'
           ServiceCidr: '{{ service_cidr }}'
-          SshAccessCidr: '{{ ssh_access_cidr }}'
-          ApiAccessCidr: '{{ api_access_cidr }}'
           ClusterDns: '{{ cluster_dns }}'
           EtcdVolumeSize: '{{ etcd_volume_size }}'
           ImageRepository: 'k8s.gcr.io'
@@ -69,9 +69,7 @@
           InstanceType: '{{ item.instance_type }}'
           KeyPair: '{{ item.keypair }}'
           IamInstanceProfile: '{{ common_stack.stack_outputs.NodeInstanceProfile }}'
-          ApiServerSecurityGroup: '{{ common_stack.stack_outputs.ApiServerSecurityGroup }}'
-          KubeletSecurityGroup: '{{ common_stack.stack_outputs.KubeletSecurityGroup }}'
-          SshAccessCidr: '{{ item.ssh_access_cidr }}'
+          NodeSecurityGroup: '{{ common_stack.stack_outputs.NodeSecurityGroup }}'
           ClusterDns: '{{ cluster_dns }}'
           NodeLabels: '{{ item.node_labels | default("") }}'
           K8sApiServer: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}'
