--- a/stack/cloudformation/master.yml
+++ b/stack/cloudformation/master.yml
@@ -45,11 +45,11 @@ Parameters:
     AllowedValues:
       - internal
       - internet-facing
-  ApiServerSecurityGroup:
-    Description: Security group for kube-apiserver
+  LoadBalancerSecurityGroup:
+    Description: Security group of load balancer
     Type: String
-  KubeletSecurityGroup:
-    Description: Security group for kubelet
+  MasterSecurityGroup:
+    Description: Security group of masters
     Type: String
   LambdaRoleArn:
     Description: Role ARN to assign to helper Lamba functions
@@ -65,14 +65,6 @@ Parameters:
   ServiceCidr:
     Description: CIDR block of addresses for services
     Default: 10.1.0.0/16
-    Type: String
-  SshAccessCidr:
-    Description: CIDR block given ssh access to cluster
-    Default: 0.0.0.0/0
-    Type: String
-  ApiAccessCidr:
-    Description: CIDR block given API access to cluster
-    Default: 0.0.0.0/0
     Type: String
   ClusterDns:
     Description: >-
@@ -167,63 +159,6 @@ Resources:
       NumInstances: !Ref NumInstances
       KmsKeyId: !Ref KmsKeyId
 
-  EtcdSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for etcd
-      VpcId: !Ref VpcId
-
-  EtcdSecurityGroupIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref EtcdSecurityGroup
-      SourceSecurityGroupId: !Ref EtcdSecurityGroup
-      FromPort: 2379
-      ToPort: 2380
-      IpProtocol: tcp
-
-  EtcdSecurityGroupEgress:
-    Type: AWS::EC2::SecurityGroupEgress
-    Properties:
-      GroupId: !Ref EtcdSecurityGroup
-      DestinationSecurityGroupId: !Ref EtcdSecurityGroup
-      FromPort: 2379
-      ToPort: 2380
-      IpProtocol: tcp
-
-  LoadBalancerSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: !Sub ${ClusterName} load balancer
-      VpcId: !Ref VpcId
-
-  LoadBalancerSecurityGroupIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref EtcdSecurityGroup
-      SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
-      FromPort: 2379
-      ToPort: 2380
-      IpProtocol: tcp
-
-  LoadBalancerSecurityGroupIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref LoadBalancerSecurityGroup
-      CidrIp: !Ref ApiAccessCidr
-      FromPort: 443
-      IpProtocol: tcp
-      ToPort: 443
-
-  LoadBalancerSecurityGroupEgress:
-    Type: AWS::EC2::SecurityGroupEgress
-    Properties:
-      GroupId: !Ref LoadBalancerSecurityGroup
-      DestinationSecurityGroupId: !Ref AutoscalingGroupSecurityGroup
-      FromPort: 6443
-      ToPort: 6443
-      IpProtocol: tcp
-
   LoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
     Properties:
@@ -244,30 +179,6 @@ Resources:
       SecurityGroups:
         - !Ref LoadBalancerSecurityGroup
       Subnets: !Ref LoadBalancerSubnetIds
-
-  AutoscalingGroupSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for autoscaling group
-      VpcId: !Ref VpcId
-
-  AutoscalingGroupIngressSsh:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref AutoscalingGroupSecurityGroup
-      CidrIp: !Ref SshAccessCidr
-      FromPort: 22
-      IpProtocol: tcp
-      ToPort: 22
-
-  AutoscalingGroupIngressLoadBalancer:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref AutoscalingGroupSecurityGroup
-      SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
-      FromPort: 6443
-      IpProtocol: tcp
-      ToPort: 6443
 
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
@@ -336,10 +247,7 @@ Resources:
       KeyName: !Ref KeyPair
       PlacementTenancy: default
       SecurityGroups:
-        - !Ref ApiServerSecurityGroup
-        - !Ref KubeletSecurityGroup
-        - !Ref AutoscalingGroupSecurityGroup
-        - !Ref EtcdSecurityGroup
+        - !Ref MasterSecurityGroup
       UserData:
         Fn::Base64:
           !Sub |
@@ -453,15 +361,6 @@ Outputs:
   LoadBalancerDnsName:
     Description: DNS name of load balancer
     Value: !GetAtt [LoadBalancer, DNSName]
-  AutoscalingGroupSecurityGroup:
-    Description: Security group of autoscaling group
-    Value: !Ref AutoscalingGroupSecurityGroup
-  EtcdSecurityGroup:
-    Description: Security group for etcd
-    Value: !Ref EtcdSecurityGroup
-  LoadBalancerSecurityGroup:
-    Description: Security group of load balancer
-    Value: !Ref LoadBalancerSecurityGroup
   AutoScalingGroup:
     Description: Name of autoscaling group
     Value: !Ref AutoScalingGroup
