--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -29,15 +29,8 @@ Parameters:
   IamInstanceProfile:
     Description: IAM Instance profile to assign to instances
     Type: String
-  ApiServerSecurityGroup:
-    Description: Security group of apiserver
-    Type: String
-  KubeletSecurityGroup:
-    Description: Security group for kubelet
-    Type: String
-  SshAccessCidr:
-    Description: CIDR block given ssh access to cluster
-    Default: 0.0.0.0/0
+  NodeSecurityGroup:
+    Description: Security group of nodes
     Type: String
   ClusterDns:
     Description: >-
@@ -56,21 +49,6 @@ Parameters:
     Type: String
 
 Resources:
-  AutoscalingGroupSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for autoscaling group
-      VpcId: !Ref VpcId
-
-  AutoscalingGroupIngressSsh:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref AutoscalingGroupSecurityGroup
-      CidrIp: !Ref SshAccessCidr
-      FromPort: 22
-      IpProtocol: tcp
-      ToPort: 22
-
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
@@ -96,9 +74,7 @@ Resources:
       KeyName: !Ref KeyPair
       PlacementTenancy: default
       SecurityGroups:
-        - !Ref AutoscalingGroupSecurityGroup
-        - !Ref ApiServerSecurityGroup
-        - !Ref KubeletSecurityGroup
+        - !Ref NodeSecurityGroup
       UserData:
         Fn::Base64:
           !Sub |
@@ -159,9 +135,6 @@ Resources:
               - systemctl start keights-kubeadm-join.service
 
 Outputs:
-  AutoscalingGroupSecurityGroup:
-    Description: Security group of autoscaling group
-    Value: !Ref AutoscalingGroupSecurityGroup
   AutoScalingGroup:
     Description: Name of autoscaling group
     Value: !Ref AutoScalingGroup
